# challenge

DMOJ/: CalculatorTest.java
DMOJ/fun_math/a_plus_b/: APlusB.java  Main.cpp  Main.java  solution.cpp  solution.js  solution.rb  solution.ts
SPOJ/cpp/p4138/: CMakeLists.txt  build.sh  main.cpp  p4138.txt  problem.md  solution.cpp  solution.hpp  test.cpp
SPOJ/java/p4138/: build.gradle  build.sh  settings.gradle
SPOJ/js/p2730/: solution.js
SPOJ/js/p4138/: build.sh  main.js  package.json  solution.js  solution.spec.js
UVa/v1/100/: 100.cpp  100.ts  Problem100.java  parse.ts
codewars/problem01/: README.md  cpp.makefile  solution.cpp  solution.sh  solve
euler/archive/03/: euler03.cpp  euler03.java  problem3.c
euler/archive/07/: problem7.c  utility.c  utility.h
euler/archive/12/: EulerProblem12.java
euler/archive/21/: problem21.scala
euler/archive/28/: problem28.js
euler/archive/cpp_template/: CMakeLists.txt  build.sh  euler_test.cpp  main.cpp
euler/archive/cppcodes/: build.sh  euler_test.cpp  solution.cpp  solution.hpp
euler/archive/es6_template/: build.sh
euler/cpp/01/: 01.cpp  01.h  01_test.cpp  build.sh  problem.md
euler/cpp/01a/: CMakeLists.txt  main.cpp  solution.cpp  solution.hpp  test.cpp
euler/es6/01/: package-lock.json  run.sh  (+2 more)
euler/rust_template/: build.sh
exercism/cpp/: build.sh
exercism/javascript/: setup.sh
hackerrank/javacode/: build.gradle  run.sh
leetcode/archive/: JUnitCheck.java  Problem01.java  parser.java  test_input.csv
leetcode/javacode/: .project  build.gradle  run.sh
leetcode/jscode/: package.json  run.sh
(+460 files in other folders)
